--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-    <link rel="preload" href="./style/fonts/Lato/Lato-Regular.ttf" as="font" type="font/ttf" crossorigin="anonymous">
+    <link rel="preload" href="style/fonts/Lato/Lato-Regular.ttf" as="font" type="font/ttf" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-    <script src="./style/javascript/navJS.js"></script>
-    <script src="./style/javascript/lightbox.js"></script>
-    <link rel="stylesheet" href="./style/css/mystyle.css">
+    <script src="style/javascript/navJS.js"></script>
+    <script src="style/javascript/lightbox.js"></script>
+    <link rel="stylesheet" href="style/css/mystyle.css">
 </head>
 <body>
 
@@ -32,18 +32,18 @@
                 <li><a href="index.html">Home</a></li>
 
                 <li class="portDrop">
-                    <a href="./pages/portfolio.html">Portfolio <span class="caret"></span></a>
+                    <a href="pages/portfolio.html">Portfolio <span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a href="./pages/documentary.html">Documentary</a></li>
-                        <li><a href="./pages/phonePhotography.html">Phone Photography</a></li>
-                        <li><a href="./pages/portraits.html">Portrait</a></li>
-                        <li><a href="./pages/weddings.html">Weddings</a></li>
+                        <li><a href="pages/documentary.html">Documentary</a></li>
+                        <li><a href="pages/phonePhotography.html">Phone Photography</a></li>
+                        <li><a href="pages/portraits.html">Portrait</a></li>
+                        <li><a href="pages/weddings.html">Weddings</a></li>
                     </ul>
                 </li>
 
-                <li><a href="./pages/packages.html">Packages</a></li>
-                <li><a href="./pages/inquiry.html">Inquire</a></li>
-                <li><a href="./pages/aboutUs.html">About Us</a></li>
+                <li><a href="pages/packages.html">Packages</a></li>
+                <li><a href="pages/inquiry.html">Inquire</a></li>
+                <li><a href="pages/aboutUs.html">About Us</a></li>
             </ul>
         </div>
 
@@ -55,13 +55,13 @@
     <div class="carousel-inner">
         <div class="item active">
             <div class="row no-gutters">
-                <div class="col-sm-12"><img src="images/realEstate/2.jpg" alt="image"></div>
+                <div class="col-sm-12"><img src="images/realEstate/2.JPG" alt="image"></div>
             </div>
         </div>
 
         <div class="item">
             <div class="row no-gutters">
-                <div class="col-sm-12"><img src="images/documentary/7.jpg" alt="image"></div>
+                <div class="col-sm-12"><img src="images/documentary/7.JPG" alt="image"></div>
             </div>
         </div>
 
@@ -101,19 +101,18 @@
 
     <div class="col-sm-4 mgRow">
         <img class="clickable-img" src="images/wedding/5.jpg" alt="image">
-		<img class="clickable-img" src="images/wedding/19.jpg" alt="image">
+		<img class="clickable-img" src="images/wedding/8.jpg" alt="image">
 		<img class="clickable-img" src="images/wedding/7.jpg" alt="image">
 		<img class="clickable-img" src="images/wedding/35.jpg" alt="image">
         
     </div>
 
     <div class="col-sm-4 mgRow">
-		<img class="clickable-img" src="images/documentary/4.JPG" alt="image">
-        <img class="clickable-img" src="images/documentary/5.JPG" alt="image">
-		<img class="clickable-img" src="images/documentary/6.JPG" alt="image">
-		<img class="clickable-img" src="images/documentary/3.JPG" alt="image">
-		<img class="clickable-img" src="images/documentary/5.JPG" alt="image">
-		<img class="clickable-img" src="images/realEstate/6.jpg" alt="image">
+	    <img class="clickable-img" src="images/portrait/11.jpg" alt="image">
+        <img class="clickable-img" src="images/documentary/4.JPG" alt="image">
+		<img class="clickable-img" src="images/phonePhotography/40.jpg" alt="image">
+        <img class="clickable-img" src="images/portrait/16.jpg" alt="image">
+	
         
 		
     </div>
@@ -123,10 +122,10 @@
 <div class="container-fluid msgCont" style="margin-top: 5vh">
     <h2 style="font-weight: 100; text-transform: uppercase; margin-bottom: 3vh">Learn More:</h2>
     <ul class="pagination">
-        <li style="font-weight: 200; text-transform: uppercase"><a href="./pages/portfolio.html">Portfolio</a></li>
-        <li style="font-weight: 200; text-transform: uppercase"><a href="./pages/packages.html">Packages</a></li>
-        <li style="font-weight: 200; text-transform: uppercase"><a href="./pages/inquiry.html">Inquire</a></li>
-        <li style="font-weight: 200; text-transform: uppercase"><a href="./pages/aboutUs.html">About Us</a></li>
+        <li style="font-weight: 200; text-transform: uppercase"><a href="pages/portfolio.html">Portfolio</a></li>
+        <li style="font-weight: 200; text-transform: uppercase"><a href="pages/packages.html">Packages</a></li>
+        <li style="font-weight: 200; text-transform: uppercase"><a href="pages/inquiry.html">Inquire</a></li>
+        <li style="font-weight: 200; text-transform: uppercase"><a href="pages/aboutUs.html">About Us</a></li>
     </ul>
 		
 </div>
@@ -137,9 +136,24 @@
 
 </body>
 
-<footer class="footerCnt">
-    <div class="container-fluid msgCont">
-        <h4 style="font-weight: 200">I will end it all :)</h4>
+<footer class="footerCnt palette">
+    <div class="container-fluid msgCont" style="height: 20vh">
+        <div class="row">
+            <h4 style="font-weight: 200">HOMBOI PHOTOGRAPHY®</h4>
+
+            <h4 style="font-weight: 200"> © 2025 Created by Entila,Vallejos,Seneca,Jabes,Lacanlale. </h4>
+            <h4>Email us: <a href="homboiphotography@gmail.com">homboiphotography@gmail.com</a></h4>
+
+            <div class="social-links">
+                <h4>FOLLOW US</h4>
+                <a href="https://web.facebook.com/profile.php?id=100009121068622&_rdc=1&_rdr#" target="_blank">
+                    <i class="fa-brands fa-facebook"></i>
+                </a>
+                <a href="https://www.instagram.com/homboi_001?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank">
+                    <i class="fa-brands fa-instagram"></i>
+                </a>
+            </div>
+        </div>
     </div>
 </footer>
 </html>
