--- a/pages/inquiry.html
+++ b/pages/inquiry.html
@@ -48,8 +48,8 @@
 <body>
 
 <div class="homeHeader jumbotron palette">
-    <h1 style="text-transform: uppercase; font-weight: 200">About Us</h1>
-    <h4 style="text-transform: uppercase; font-weight: 100; color: white">Meet the team</h4>
+    <h1 style="text-transform: uppercase; font-weight: 200">Inquire</h1>
+    <h4 style="text-transform: uppercase; font-weight: 100; color: white">Book now</h4>
 </div>
 
 <nav class="navbar custom-nav">
@@ -84,7 +84,7 @@
     <div class="row">
 
         <div class="col-sm-6 imgCont">
-            <img src="../images/portrait/1.jpg" class="img-responsive" alt="Photo Placeholder">
+            <img src="../images/prof.png" class="img-responsive" alt="Photo Placeholder">
         </div>
 
         <div class="col-sm-6 inpCont">
@@ -180,4 +180,25 @@
 
 </div>
 </body>
+<footer class="footerCnt palette">
+    <div class="container-fluid msgCont" style="height: 20vh">
+        <div class="row">
+            <h4 style="font-weight: 200">HOMBOI PHOTOGRAPHY®</h4>
+
+            <h4 style="font-weight: 200"> © 2025 Created by Entila,Vallejos,Seneca,Jabes,Lacanlale. </h4>
+            <h4>Email us: <a href="homboiphotography@gmail.com">homboiphotography@gmail.com</a></h4>
+
+            <div class="social-links">
+                <h4>FOLLOW US</h4>
+                <a href="https://web.facebook.com/profile.php?id=100009121068622&_rdc=1&_rdr#" target="_blank">
+                    <i class="fa-brands fa-facebook"></i>
+                </a>
+                <a href="https://www.instagram.com/homboi_001?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank">
+                    <i class="fa-brands fa-instagram"></i>
+                </a>
+            </div>
+        </div>
+    </div>
+</footer>
+
 </html>
