--- a/pages/packages.html
+++ b/pages/packages.html
@@ -52,10 +52,10 @@
 </div>
 
 <div class="container-fluid pkgCont">
-    <img class="col-sm-6" src="../images/sample.jpg">
+    <img class="col-sm-6" src="../images/documentary/4.JPG">
     <div class="col-sm-6 pkgRates">
         <div class="ratesWrapper">
-            <h2>Event</h2>
+            <h2>Documentary</h2>
             <h4>Package 1</h4>
             <p class="rateSpacer"></p>
             <p><span class="desc">3 Hours</span> <span class="price">Ksh. 9,000</span></p>
@@ -87,7 +87,7 @@
         </div>
         <p class="total"><span class="desc">Price</span> <span class="price">KSH. 7,500</span></p>
     </div>
-    <img class="col-sm-6" src="../images/sample2.jpg">
+    <img class="col-sm-6" src="../images/portrait/11.jpg">
 </div>
 
 <div class="msgCont" style="height: 5vh; align-content: center; justify-content: center; display: flex; margin-bottom: 4vh">
@@ -97,7 +97,7 @@
 
 
 <div class="container-fluid pkgCont">
-    <img class="col-sm-6" src="../images/sample3.jpg">
+    <img class="col-sm-6" src="../images/portrait/14.jpg">
     <div class="col-sm-6 pkgRates">
         <div class="ratesWrapper">
             <h2>Portrait</h2>
@@ -129,7 +129,7 @@
         </div>
         <p class="total"><span class="desc">Price</span> <span class="price">Ksh. 45,000</span></p>
     </div>
-    <img class="col-sm-6" src="../images/sample4.jpg">
+    <img class="col-sm-6" src="../images/realEstate/2.JPG" style="height: 40vh">
 </div>
 
 <div class="msgCont" style="height: 5vh; align-content: center; justify-content: center; display: flex; margin-bottom: 4vh">
@@ -139,7 +139,7 @@
 
 
 <div class="container-fluid pkgCont">
-    <img class="col-sm-6" src="../images/sample5.jpg">
+    <img class="col-sm-6" src="../images/wedding/5.jpg">
     <div class="col-sm-6 pkgRates">
         <div class="ratesWrapper">
             <h2>Wedding</h2>
@@ -165,15 +165,30 @@
 <div class="container-fluid msgCont">
     <h2 style="font-weight: 100; text-transform: uppercase; margin-bottom: 3vh">Detailed Pricing for Custom Packages are Available</h2>
     <ul class="pagination">
-        <li style="font-weight: 200; text-transform: uppercase"><a href="../pdf/VallejosAchieve3000SS.pdf">Click Here</a></li>
+        <li style="font-weight: 200; text-transform: uppercase"><a href="../pdf/packageGuide.pdf">Click Here</a></li>
     </ul>
 </div>
 
 </body>
 
-<footer class="footerCnt">
-    <div class="container-fluid msgCont">
-        <h4 style="font-weight: 200">I will end it all :)</h4>
+<footer class="footerCnt palette">
+    <div class="container-fluid msgCont" style="height: 20vh">
+        <div class="row">
+            <h4 style="font-weight: 200">HOMBOI PHOTOGRAPHY®</h4>
+
+            <h4 style="font-weight: 200"> © 2025 Created by Entila,Vallejos,Seneca,Jabes,Lacanlale. </h4>
+            <h4>Email us: <a href="homboiphotography@gmail.com">homboiphotography@gmail.com</a></h4>
+
+            <div class="social-links">
+                <h4>FOLLOW US</h4>
+                <a href="https://web.facebook.com/profile.php?id=100009121068622&_rdc=1&_rdr#" target="_blank">
+                    <i class="fa-brands fa-facebook"></i>
+                </a>
+                <a href="https://www.instagram.com/homboi_001?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank">
+                    <i class="fa-brands fa-instagram"></i>
+                </a>
+            </div>
+        </div>
     </div>
 </footer>
 </html>
