--- a/pages/aboutUs.html
+++ b/pages/aboutUs.html
@@ -16,7 +16,7 @@
 
 <div class="homeHeader jumbotron palette">
     <h1 style="text-transform: uppercase; font-weight: 200">About Us</h1>
-    <h4 style="text-transform: uppercase; font-weight: 100; color: white">Meet the team</h4>
+    <h4 style="text-transform: uppercase; font-weight: 100; color: white">At Homboi Photography, we capture moments that last a lifetime.</h4>
 </div>
 
 <nav class="navbar custom-nav">
@@ -52,34 +52,61 @@
 </div>
 
 <div class="container-fluid pkgCont">
-    <img class="col-sm-6" src="../images/sample.jpg">
+    <img class="col-sm-6" src="../images/prof.png">
     <div class="col-sm-6 pkgRates">
+        <h1 class="rateSpacer"></h1>
+        <h1 style="text-transform: uppercase; font-weight: 400">Hi, I am Javan Jabes</h1>
+        <h3 style="text-transform: uppercase; font-weight: 200">“Photography is my passion - nature is my refuge. Combine the two, and that is where I am most at peace.”</h3>
+        <h1 class="rateSpacer" style="height: 25vh"></h1>
         <div class="ratesWrapper">
-            <h2>Event</h2>
-            <h4>Package 1</h4>
-            <p class="rateSpacer"></p>
-            <p><span class="desc">3 Hours</span> <span class="price">Ksh. 9,000</span></p>
-            <p><span class="desc">Half Day</span> <span class="price">Ksh. 20,000</span></p>
-            <p><span class="desc">Full Day</span> <span class="price">Ksh. 35,000</span></p>
+            <h2 style="margin-bottom: 2vh;">Contacts:</h2>
+            <p><span class="desc">CEO</span> <span class="price">Jabes J Mumbo</span></p>
+            <p><span class="desc">Telephone no.</span> <span class="price">+254711928959</span></p>
+            <p><span class="desc">Instagram</span> <span class="price" style="text-transform: revert">homboi_001</span></p>
+            <p><span class="desc">Gmail</span> <span class="price" style="text-transform: revert">homboiphotography@gmail.com</span></p>
+
         </div>
-        <p class="total"><span class="desc">Price</span> <span class="price">Ksh. 35,000</span></p>
     </div>
 </div>
 
-<div class="container-fluid pkgCont">
-    <img class="col-sm-6" src="../images/sample.jpg">
-    <div class="col-sm-6 pkgRates">
-        <div class="ratesWrapper">
-            <h2>Event</h2>
-            <h4>Package 1</h4>
-            <p class="rateSpacer"></p>
-            <p><span class="desc">3 Hours</span> <span class="price">Ksh. 9,000</span></p>
-            <p><span class="desc">Half Day</span> <span class="price">Ksh. 20,000</span></p>
-            <p><span class="desc">Full Day</span> <span class="price">Ksh. 35,000</span></p>
-        </div>
-        <p class="total"><span class="desc">Price</span> <span class="price">Ksh. 35,000</span></p>
+<div class="msgCont" style="height: 5vh; align-content: center; justify-content: center; display: flex; margin-bottom: 4vh; margin-top: 4vh">
+    <div style="width: 40vw; border-bottom: .2vh solid #f1f1f1;">
     </div>
 </div>
+
+<div class="msgCont" style="height: 10vh">
+    <h2 style="text-transform: uppercase; font-weight: 200">Find us</h2>
+</div>
+
+<div class="msgCont" style="height: 40vh">
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3861.5322060120952!2d121.01612500000002!3d14
+        .568722999999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3397c9a152621d85%3A0xb143575c8553624f!2sTim%
+        20Building!5e0!3m2!1sen!2sph!4v1741067470782!5m2!1sen!2sph" width="800" height="550" style="border:0;"
+        allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+    </iframe>
+</div>
+
 
 </body>
+
+<footer class="footerCnt palette">
+    <div class="container-fluid msgCont" style="height: 20vh">
+        <div class="row">
+            <h4 style="font-weight: 200">HOMBOI PHOTOGRAPHY®</h4>
+
+            <h4 style="font-weight: 200"> © 2025 Created by Entila,Vallejos,Seneca,Jabes,Lacanlale. </h4>
+            <h4>Email us: <a href="homboiphotography@gmail.com">homboiphotography@gmail.com</a></h4>
+
+            <div class="social-links">
+                <h4>FOLLOW US</h4>
+                <a href="https://web.facebook.com/profile.php?id=100009121068622&_rdc=1&_rdr#" target="_blank">
+                    <i class="fa-brands fa-facebook"></i>
+                </a>
+                <a href="https://www.instagram.com/homboi_001?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank">
+                    <i class="fa-brands fa-instagram"></i>
+                </a>
+            </div>
+        </div>
+    </div>
+</footer>
 </html>
