--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -52,28 +52,25 @@
 
 <div class="container-fluid prtChCont">
     <div class="col-sm-4 chImgCol">
-        <img class="clickable-img" src="../images/sample.jpg">
-        <img class="clickable-img" src="../images/sample2.jpg">
-        <img class="clickable-img" src="../images/sample7.jpg">
-        <img class="clickable-img" src="../images/sample2.jpg">
-        <img class="clickable-img" src="../images/sample6.jpg">
-        <img class="clickable-img" src="../images/sample9.jpg">
+        <img class="clickable-img" src="../images/documentary/1.JPG">
+        <img class="clickable-img" src="../images/wedding/1.jpg">
+        <img class="clickable-img" src="../images/portrait/1.jpg">
+        <img class="clickable-img" src="../images/realEstate/1.JPG">
+        <img class="clickable-img" src="../images/phonePhotography/21.jpg">
     </div>
     <div class="col-sm-4 chImgCol">
-        <img class="clickable-img" src="../images/sample3.jpg">
-        <img class="clickable-img" src="../images/sample4.jpg">
-        <img class="clickable-img" src="../images/sample2.jpg">
-        <img class="clickable-img" src="../images/sample.jpg">
-        <img class="clickable-img" src="../images/sample2.jpg">
-        <img class="clickable-img" src="../images/sample7.jpg">
+        <img class="clickable-img" src="../images/documentary/2.JPG">
+        <img class="clickable-img" src="../images/wedding/2.jpg">
+        <img class="clickable-img" src="../images/portrait/2.jpg">
+        <img class="clickable-img" src="../images/realEstate/2.JPG">
+        <img class="clickable-img" src="../images/phonePhotography/22.jpg">
     </div>
     <div class="col-sm-4 chImgCol">
-        <img class="clickable-img" src="../images/sample2.jpg">
-        <img class="clickable-img" src="../images/sample6.jpg">
-        <img class="clickable-img" src="../images/sample9.jpg">
-        <img class="clickable-img" src="../images/sample3.jpg">
-        <img class="clickable-img" src="../images/sample4.jpg">
-        <img class="clickable-img" src="../images/sample2.jpg">
+        <img class="clickable-img" src="../images/documentary/3.JPG">
+        <img class="clickable-img" src="../images/wedding/3.jpg">
+        <img class="clickable-img" src="../images/portrait/3.jpg">
+        <img class="clickable-img" src="../images/realEstate/3.JPG">
+        <img class="clickable-img" src="../images/phonePhotography/31.jpg">
     </div>
 </div>
 
@@ -90,28 +87,28 @@
 
     <div class="col-sm-3 prtBanner">
         <a href="documentary.html">
-            <img src="../images/sample2.jpg" class="img-fluid w-100" style="height: 100%">
+            <img src="../images/documentary/8.JPG" class="img-fluid w-100" style="height: 100%">
             <div class="hover-text">Documentary</div>
         </a>
     </div>
 
     <div class="col-sm-3 prtBanner">
         <a href="phonePhotography.html">
-            <img src="../images/sample5.jpg" class="img-fluid w-100" style="height: 100%">
+            <img src="../images/phonePhotography/36.jpg" class="img-fluid w-100" style="height: 100%">
             <div class="hover-text">Phone Photography</div>
         </a>
     </div>
 
     <div class="col-sm-3 prtBanner">
         <a href="portraits.html">
-            <img src="../images/sample9.jpg" class="img-fluid w-100" style="height: 100%">
+            <img src="../images/portrait/9.jpg" class="img-fluid w-100" style="height: 100%">
             <div class="hover-text">Portrait</div>
         </a>
     </div>
 
     <div class="col-sm-3 prtBanner">
         <a href="weddings.html">
-            <img src="../images/sample.jpg" class="img-fluid w-100" style="height: 100%">
+            <img src="../images/wedding/14.jpg" class="img-fluid w-100" style="height: 100%">
             <div class="hover-text">Weddings</div>
         </a>
     </div>
@@ -124,4 +121,25 @@
 
 
 </body>
+
+<footer class="footerCnt palette" style="margin-top: 0">
+    <div class="container-fluid msgCont" style="height: 20vh">
+        <div class="row">
+            <h4 style="font-weight: 200">HOMBOI PHOTOGRAPHY®</h4>
+
+            <h4 style="font-weight: 200"> © 2025 Created by Entila,Vallejos,Seneca,Jabes,Lacanlale. </h4>
+            <h4>Email us: <a href="homboiphotography@gmail.com">homboiphotography@gmail.com</a></h4>
+
+            <div class="social-links">
+                <h4>FOLLOW US</h4>
+                <a href="https://web.facebook.com/profile.php?id=100009121068622&_rdc=1&_rdr#" target="_blank">
+                    <i class="fa-brands fa-facebook"></i>
+                </a>
+                <a href="https://www.instagram.com/homboi_001?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank">
+                    <i class="fa-brands fa-instagram"></i>
+                </a>
+            </div>
+        </div>
+    </div>
+</footer>
 </html>
