--- a/pages/portraits.html
+++ b/pages/portraits.html
@@ -52,19 +52,19 @@
 
 <div class="container-fluid prtChCont">
     <div class="col-sm-4 chImgCol">
-        <img class="clickable-img" src="../images/sample.jpg">
-        <img class="clickable-img" src="../images/sample2.jpg">
-        <img class="clickable-img" src="../images/sample7.jpg">
+        <img class="clickable-img" src="../images/portrait/14.jpg">
+        <img class="clickable-img" src="../images/portrait/5.jpg">
+        <img class="clickable-img" src="../images/portrait/3.jpg">
     </div>
     <div class="col-sm-4 chImgCol">
-        <img class="clickable-img" src="../images/sample3.jpg">
-        <img class="clickable-img" src="../images/sample4.jpg">
-        <img class="clickable-img" src="../images/sample2.jpg">
+        <img class="clickable-img" src="../images/portrait/6.jpg">
+        <img class="clickable-img" src="../images/portrait/16.jpg">
+        <img class="clickable-img" src="../images/portrait/12.jpg">
     </div>
     <div class="col-sm-4 chImgCol">
-        <img class="clickable-img" src="../images/sample2.jpg">
-        <img class="clickable-img" src="../images/sample6.jpg">
-        <img class="clickable-img" src="../images/sample9.jpg">
+        <img class="clickable-img" src="../images/portrait/9.jpg">
+        <img class="clickable-img" src="../images/portrait/8.jpg">
+        <img class="clickable-img" src="../images/portrait/2.jpg">
     </div>
 </div>
 
@@ -84,9 +84,24 @@
 
 </body>
 
-<footer class="footerCnt">
-    <div class="container-fluid msgCont">
-        <h4 style="font-weight: 200">I will end it all :)</h4>
+<footer class="footerCnt palette">
+    <div class="container-fluid msgCont" style="height: 20vh">
+        <div class="row">
+            <h4 style="font-weight: 200">HOMBOI PHOTOGRAPHY®</h4>
+
+            <h4 style="font-weight: 200"> © 2025 Created by Entila,Vallejos,Seneca,Jabes,Lacanlale. </h4>
+            <h4>Email us: <a href="homboiphotography@gmail.com">homboiphotography@gmail.com</a></h4>
+
+            <div class="social-links">
+                <h4>FOLLOW US</h4>
+                <a href="https://web.facebook.com/profile.php?id=100009121068622&_rdc=1&_rdr#" target="_blank">
+                    <i class="fa-brands fa-facebook"></i>
+                </a>
+                <a href="https://www.instagram.com/homboi_001?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank">
+                    <i class="fa-brands fa-instagram"></i>
+                </a>
+            </div>
+        </div>
     </div>
 </footer>
 </html>
