--- a/pages/documentary.html
+++ b/pages/documentary.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <link rel="preload" href="../style/fonts/Lato/Lato-Regular.ttf" as="font" type="font/ttf" crossorigin="anonymous">
+    <link rel="preload stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <script src="../style/javascript/navJS.js"></script>
@@ -85,20 +86,20 @@
 </body>
 
 <footer class="footerCnt palette">
-    <div class="container-fluid msgCont" style="height: 20vh">
+    <div class="container-fluid msgCont" style="height: 25vh">
         <div class="row">
             <h4 style="font-weight: 200">HOMBOI PHOTOGRAPHY®</h4>
 
             <h4 style="font-weight: 200"> © 2025 Created by Entila,Vallejos,Seneca,Jabes,Lacanlale. </h4>
-            <h4>Email us: <a href="homboiphotography@gmail.com">homboiphotography@gmail.com</a></h4>
+            <h4>Email us: <a href="homboiphotography@gmail.com" style="text-transform: initial; text-decoration: none; color: #f1f1f1">homboiphotography@gmail.com</a></h4>
 
             <div class="social-links">
                 <h4>FOLLOW US</h4>
-                <a href="https://web.facebook.com/profile.php?id=100009121068622&_rdc=1&_rdr#" target="_blank">
-                    <i class="fa-brands fa-facebook"></i>
+                <a href="https://web.facebook.com/profile.php?id=100009121068622&_rdc=1&_rdr#" target="_blank" style="margin-right: 1vw">
+                    <i class="fa-brands fa-facebook" style="color: #f1f1f1"></i>
                 </a>
                 <a href="https://www.instagram.com/homboi_001?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank">
-                    <i class="fa-brands fa-instagram"></i>
+                    <i class="fa-brands fa-instagram" style="color: #f1f1f1"></i>
                 </a>
             </div>
         </div>
